# sales-ai-kit

./: README.md  README_blog_kit.md  README_pmf_kit.md  pyproject.toml
.genreleases/: checksums-v0.0.0-counttest.txt  checksums-v0.0.0-full.txt  checksums-v0.0.0-smoke.txt
.github/workflows/: ci.yml  release.yml
.github/workflows/scripts/: check-release-exists.sh  create-github-release.sh  create-release-packages.sh  generate-release-notes.sh  get-next-version.sh
.saleskit/scripts/bash/: setup-plan.sh  update-agent-context.sh
.saleskit/templates/: checklist-template.md  plan-template.md  spec-template.md
.specify/memory/: constitution.md
refs/: 0_overview.md  1_principles_for_constitution.md  2_define_for_specify.md  3_project_mangement_for_plan.md  4_pm_tasking_for_tasks.md  5_writing_for_optimize.md  6_claude_code.md  6_windsurf_prompts.md  7_claude_code_opt.md  7_optimization.md  instructions.md  releases.md
refs/5_more/: agentic_mcn.md  agentic_sales_products.md  startup_launch_playbook.md
scripts/: build-templates.sh  validate-templates.sh
scripts/smoke/: test_install.sh
specs/000-blog-tech-kit-foundation/: plan.md  spec.md  tasks.md  validation-report.md
specs/001-saleskit-foundation/: plan.md  spec.md  tasks.md
specs/001-saleskit-foundation/checklists/: requirements.md  setup.md
specs/001-saleskit-foundation/validation/: multi-kit-install.md  multi-kit-validation.md  pdca.md  two-meanings-of-specify.md
specs/002-saleskit-auto-template-release/: plan.md  spec.md  tasks.md
specs/003-blogkit-auto-template-release/: plan.md  spec.md  tasks.md
src/saleskit/: __init__.py  cli.py
(+44 files in other folders)
